--- a/monitor.html
+++ b/monitor.html
@@ -9,13 +9,13 @@ video {
   margin: 1em 0;
 }
 button {
-  padding: 1em;
+  padding: .5em 2em;
+  font-size: 20px;
 }
 </style>
 
 <video id="remotevideo" playsinline></video><br>
-<button id=btn>CONNECT</button>
-
+<button id=btn>remotecam - connect</button>
 
 <script src="https://unpkg.com/@open-ayame/ayame-web-sdk@2020.2.1/dist/ayame.min.js"></script>
 <script type="module">
